[gd_scene load_steps=14 format=3 uid="uid://c3b57t6oxwavu"]

[ext_resource type="Script" path="res://Scripts/Popup.gd" id="1_vpiaa"]
[ext_resource type="FontFile" uid="uid://ccnslr75308d7" path="res://Fonts/ChakraPetch-Bold.ttf" id="2_ac1vq"]
[ext_resource type="FontFile" uid="uid://dnvf2ybp7jptv" path="res://Fonts/ChakraPetch-Regular.ttf" id="4_q7lmk"]
[ext_resource type="FontFile" uid="uid://cuqb4jrlvmpbb" path="res://Fonts/ChakraPetch-Italic.ttf" id="5_71i7q"]
[ext_resource type="AudioStream" uid="uid://c3x801gp472xu" path="res://Sounds/alert.wav" id="6_t8rmp"]
[ext_resource type="FontFile" uid="uid://36k38rpucgyp" path="res://Fonts/ChakraPetch-BoldItalic.ttf" id="6_witmj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oln3g"]
bg_color = Color(0.258824, 0.152941, 0.470588, 0.784314)
skew = Vector2(0.585, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tui0e"]
bg_color = Color(0.721569, 0.552941, 1, 1)
skew = Vector2(0.585, 0)

[sub_resource type="LabelSettings" id="LabelSettings_0m6ja"]
font = ExtResource("2_ac1vq")
font_size = 71
font_color = Color(0.258824, 0.152941, 0.470588, 1)

[sub_resource type="Animation" id="Animation_s84ya"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-216, 171)]
}

[sub_resource type="Animation" id="Animation_1kvyp"]
resource_name = "hide"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.366667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-213, 171), Vector2(2135, 171)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Elements:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_i35mi"]
resource_name = "show"
length = 0.45
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-2572, 171), Vector2(-213, 171)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Elements:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.433333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oehfj"]
_data = {
"RESET": SubResource("Animation_s84ya"),
"hide": SubResource("Animation_1kvyp"),
"show": SubResource("Animation_i35mi")
}

[node name="Popup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vpiaa")
message_text = "[center]Body text body text body text.
The body text keeps growing.[/center]"

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -216.0
offset_top = 171.0
offset_right = 220.0
offset_bottom = -171.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(396, 233)
theme_override_styles/panel = SubResource("StyleBoxFlat_oln3g")

[node name="Elements" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 0
offset_left = -12.0
offset_top = 171.0
offset_right = 1908.0
offset_bottom = 909.0

[node name="TitleBar" type="Panel" parent="Elements"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -65.0
offset_top = 82.0
offset_right = 91.0
offset_bottom = 188.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tui0e")

[node name="Title" type="Label" parent="Elements/TitleBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Title"
label_settings = SubResource("LabelSettings_0m6ja")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageContainer" type="MarginContainer" parent="Elements"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -7.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Elements/MessageContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="RichTextLabel" parent="Elements/MessageContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("4_q7lmk")
theme_override_fonts/italics_font = ExtResource("5_71i7q")
theme_override_fonts/bold_italics_font = ExtResource("6_witmj")
theme_override_fonts/bold_font = ExtResource("2_ac1vq")
theme_override_font_sizes/normal_font_size = 38
bbcode_enabled = true
text = "[center]Body text body text body text. The body text keeps growing.[/center]"
fit_content = true

[node name="Controls" type="RichTextLabel" parent="Elements"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = -102.0
offset_right = 12.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/normal_font = ExtResource("2_ac1vq")
theme_override_font_sizes/normal_font_size = 41
bbcode_enabled = true
text = "[center]Controls[/center]"
autowrap_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_oehfj")
}

[node name="AlertSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_t8rmp")
